--- a/templates/about.html
+++ b/templates/about.html
@@ -20,7 +20,7 @@
                     
                 <p>With hands-on experience in AI/ML projects and a deep interest in emerging technologies, I am eager to apply my skills to real-world challenges and contribute to the future of AI and big data analytics.</p>
                 
-                <a href="{{ url_for('contact') }}" class="btn-contact">Contact</a>
+                <a href="{{ url_for('resume') }}" class="btn-contact">Resume</a>
             </div>
             <div class="skills-section">
                 <h3>My Skills</h3>
